# junqueira_agents

./: docker-compose.yml  html_to_pdf.py  parsing.py  readme.md  requirements.txt  template.html
JunqueiraCrew-Web/src/app/: page.tsx
JunqueiraCrew-Web/src/app/components/: Inputzone.tsx
cloud_function/: main.py
crewai/: local_parsing.py  test_openai_api.py
crewai/fii_crew/: Dockerfile  main.py  texto_extraido.txt
crewai/fii_crew/output/: data_report.csv  dre_analysis.txt  risk_analysis.txt
crewai/fii_crew/src/fii_crew/: crew.py  main.py
crewai/fii_crew/src/fii_crew/config/: tasks.yaml
crewai/parse_pdf_function/: Dockerfile  main.py
crewai/trigger_crew/: main.py
crewai/trigger_parse/: main.py
fii_crew/: Dockerfile  README.md  main.py  pyproject.toml  template.html
fii_crew/knowledge/: user_preference.txt
fii_crew/output/: data_report.csv  dre_analysis.md  dre_analysis.txt  risk_analysis.md  risk_analysis.txt
fii_crew/src/fii_crew/: crew.py  main.py
fii_crew/src/fii_crew/config/: tasks.yaml
junqueiracrew-analisefii/: .dockerignore  .env  Dockerfile  crew.py  main.py  requirements.txt  template.html
junqueiracrew-analisefii/config/: tasks.yaml
junqueiracrew-analisefii/output/: data_report_final.csv
latest_ai_development/src/latest_ai_development/: main.py
latest_ai_development/src/latest_ai_development/config/: agents.yaml  tasks.yaml
parse_pdf_function/: Dockerfile  main.py  requirements.txt
trigger_parse/: main.py
