[project]
name = "fii_crew"
version = "0.1.0"
description = "fii-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "weasyprint",
]

[project.scripts]
fii_crew = "fii_crew.main:run"
run_crew = "fii_crew.main:run"
train = "fii_crew.main:train"
replay = "fii_crew.main:replay"
test = "fii_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
